fix too large header elements in journal pages and journal page width

--- a/src/styles/foundryvtt-gmScreen.scss
+++ b/src/styles/foundryvtt-gmScreen.scss
@@ -262,6 +262,16 @@ $transition-timing: 400ms;
       }
     }
 
+    // fix ultra large header elements
+    > header {
+      flex: 0;
+    }
+
+    .journal-page-content {
+      width: auto !important;
+      height: auto !important;
+    }
+
     .compact-journal-entry {
       min-height: 100%; // needed for dnd5e
 
